--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Robbie's Medical Notes</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>{{ page.title }} | Robbie's Medical Notes</title>
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
     <header>
-      <h1>Robbie's Medical Notes</h1>
+      <h1><a href="/">Robbie's Medical Notes</a></h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="dotphrase/index.html">Dotphrases</a></li>
-          <li><a href="files/index.html">Clinical Topics</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/dotphrases/">Dotphrases</a></li>
+          <li><a href="/high_yield/">High Yield</a></li>
+          <li><a href="/Website/">Website Pages</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <h2>Welcome!</h2>
-      <p>This site contains clinical dotphrases, condition summaries, and notes.</p>
+      {{ content }}
     </main>
+    <footer>
+      <p>&copy; {{ site.time | date: "%Y" }} Robbie's Medical Notes</p>
+    </footer>
   </body>
 </html>
